# raspberrypi_stats

./: .gitignore  LICENSE  Makefile  README.md  i2c_python_stats.service  i2c_python_stats.timer  i2c_python_stats_stop.service  i2c_python_stats_stop.timer  raspberry_stats.py  raspberry_stats_landscape_clasic.py
assets/ppm/: powered_by_raspberry.ppm  rasp_logo.ppm  raspberry.ppm
cpp/: CMakeLists.txt
cpp/src/: main.cpp  ssd1306.cpp  ssd1306.h  stats.cpp  stats.h  tiny5x7.inc
systemd/: raspberrypi_stats.env  raspberrypi_stats.service  raspberrypi_stats_cpp.env  raspberrypi_stats_cpp.service  raspberrypi_stats_py.env  raspberrypi_stats_py.service
